# vector-functorlazy

./: README.md  vector-functorlazy.cabal  vector-superlazy.cabal
img/: algorithm-compare.gnu  boxedvector1.tex  boxedvector2.tex  boxedvector3.tex  boxedvector4.tex  boxedvector5.tex  boxedvector7.tex  buildtex.sh  commute.tex  fig1.tex  fig2.tex  fig3.tex  fig4.tex  fig5.tex  functorlazy-v-boxed.gnu  functorlazyvector1.tex  functorlazyvector2.tex  functorlazyvector3.tex  functorlazyvector4.tex  functorlazyvector5.tex  unboxedvector.tex
src/: Simple.hs
src/Data/Vector/: ExtraLazy.hs  FunctorLazy.hs  SuperLazy.hs
src/Data/Vector/FunctorLazy/: Common.hs  DualArray.hs  DualVector.hs  LazyBox.hs
src/Data/Vector/SuperLazy/: Common.hs  DualVector.hs
src/examples/: Algorithms.hs  Criterion-array.hs  Criterion.hs  VerifyCorrectness.hs
